--- a/build.gradle
+++ b/build.gradle
@@ -46,7 +46,7 @@ sourceCompatibility = 1.8
 
 targetCompatibility = 1.8
 
-version = '1.2.23-RELEASE'
+version = '1.2.24-RELEASE'
 
 group = 'com.themodernway'
 
@@ -57,7 +57,7 @@ eclipse {
 }
 
 checkstyle {
-    toolVersion = "7.7"
+    toolVersion = '7.7'
     ignoreFailures = true
 }
 
@@ -101,18 +101,18 @@ task javadocJar(type: Jar, dependsOn: doJavaDocs) {
 
 pmd {
     ignoreFailures = true
-    toolVersion = "5.6.1"
+    toolVersion = '5.6.1'
     ruleSets = [
         'java-basic',
         'java-braces'
-        ]
+    ]
 }
-    
+
 findbugs {
     ignoreFailures = true
-    toolVersion = "3.0.1"
-    effort = "max"
-    excludeFilter = project.file('config/findbugs/filter.xml')
+    toolVersion = '3.0.1'
+    effort = 'max'
+    excludeFilter = file('config/findbugs/filter.xml')
 }
 
 tasks.withType(FindBugs) {
@@ -125,10 +125,10 @@ tasks.withType(FindBugs) {
 dependencyCheck {
     failOnError = false
     outputDirectory = "${buildDir}/reports/cve"
-    suppressionFile = file("config/cve/suppress.xml")
+    suppressionFile = file('config/cve/suppress.xml')
 }
 
-task checkCodeQuality << { println ":checkCodeQuality-done" }
+task checkCodeQuality { doLast { println ':checkCodeQuality-done' } }
 
 checkCodeQuality.dependsOn checkstyleMain,pmdMain,findbugsMain,dependencyCheckAnalyze
 
@@ -173,7 +173,7 @@ def String getBuildServerHost() {
     }
     catch (Exception e)
     {
-        "localhost"
+        'localhost'
     }
 }
 
@@ -186,7 +186,7 @@ def String getBuildUser() {
 }
 
 def String getBuildServerBuild() {
-    System.getProperty('BUILD_DISPLAY_NAME') ?: 'Command line ' + GradleVersion.current().toString()
+    System.getenv('BUILD_DISPLAY_NAME') ?: "Command line gradle version ${gradle.gradleVersion}"
 }
 
 def String getBuildGITHomeURL() {
@@ -212,9 +212,7 @@ repositories {
     }
 }
 
-task codeCoverage << {
-    println ":codeCoverage-done"
-}
+task codeCoverage { doLast { println ':codeCoverage-done' } }
 
 codeCoverage.dependsOn jacocoTestReport
 
@@ -222,10 +220,10 @@ jacocoTestReport {
     reports {
         csv {
             enabled true
-            destination "${buildDir}/reports/jacoco/coverage-${version}.csv"
+            destination file("${buildDir}/reports/jacoco/coverage-${version}.csv")
         }
         xml.enabled false
-        html.destination "${buildDir}/reports/coverage"
+        html.destination file("${buildDir}/reports/coverage")
     }
 }
 
@@ -243,7 +241,7 @@ tasks.withType(GroovyCompile) {
 }
 
 dependencies {
-    compile(group: 'com.themodernway', name: 'themodernway-server-core', version: '1.2.23-RELEASE')
+    compile(group: 'com.themodernway', name: 'themodernway-server-core', version: '1.2.24-RELEASE')
     compile(group: 'org.mongodb', name: 'mongodb-driver', version: '3.4.3')
     testCompile(group: 'log4j', name: 'log4j', version: '1.2.17')
     testCompile(group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25')
@@ -312,27 +310,27 @@ def Map<String, List<String>> getGroovydocLinks() {
     lmap
 }
 
-task(buildGroovydocLinks) << {
-    def site = [:]
-    File data = file('groovydoc/GROOVYDOC_LINK_SITES.txt')
-    if (data.exists()) {
-        data.eachLine { line ->
-            site[line] = ((CharSequence) new URL("${line}/package-list").text).tokenize('\n')
+task buildGroovydocLinks {
+    doLast {
+        def site = [:]
+        File data = file('groovydoc/GROOVYDOC_LINK_SITES.txt')
+        if (data.exists()) {
+            data.eachLine { line ->
+                site[line] = ((CharSequence) new URL("${line}/package-list").text).tokenize('\n')
+            }
         }
-    }
-    File make = file('groovydoc/GROOVYDOC_LINK_LISTS.txt')
-    if(make.exists()) {
-        make.delete()
-    }
-    make.createNewFile()
-    def save = make.newPrintWriter()
-    site.each { link, list ->
-        def show = "${link}"
-        list.each { line ->
-            show = "${show},${line}"
+        File make = file('groovydoc/GROOVYDOC_LINK_LISTS.txt')
+        if(make.exists()) {
+            make.delete()
         }
-        save.println("${show}")
+        make.createNewFile()
+        def save = make.newPrintWriter()
+        site.each { link, list ->
+            def show = "${link}"
+            list.each { line -> show = "${show},${line}" }
+            save.println("${show}")
+        }
+        save.flush()
+        save.close()
     }
-    save.flush()
-    save.close()
 }
