--- a/build.gradle
+++ b/build.gradle
@@ -44,7 +44,7 @@ sourceCompatibility = 1.8
 
 targetCompatibility = 1.8
 
-version = '1.2.31.0-SNAPSHOT'
+version = '1.2.31-RELEASE'
 
 group = 'com.themodernway'
 
