--- a/build.gradle
+++ b/build.gradle
@@ -44,7 +44,7 @@ sourceCompatibility = 1.8
 
 targetCompatibility = 1.8
 
-version = '1.3.2-RELEASE'
+version = '2.0.0-RC1'
 
 group = 'com.themodernway'
 
@@ -238,8 +238,8 @@ tasks.withType(GroovyCompile) {
 }
 
 dependencies {
-    compile(group: 'com.themodernway', name: 'themodernway-server-core', version: '1.3.2-RELEASE')
-    compile(group: 'org.mongodb', name: 'mongodb-driver', version: '3.6.1')
+    compile(group: 'com.themodernway', name: 'themodernway-server-core', version: '2.0.0-RC1')
+    compile(group: 'org.mongodb', name: 'mongodb-driver', version: '3.6.2')
     testCompile(group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3')
     testCompile(group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25')
     testCompile(group: 'org.slf4j', name: 'jcl-over-slf4j', version: '1.7.25')
