--- a/build.gradle
+++ b/build.gradle
@@ -238,8 +238,9 @@ tasks.withType(GroovyCompile) {
 }
 
 dependencies {
-    compile(group: 'com.themodernway', name: 'themodernway-server-core', version: '2.0.1-RELEASE')
-    compile(group: 'org.mongodb', name: 'mongodb-driver', version: '3.6.2')
+    compile(group: 'com.themodernway', name: 'themodernway-server-core', version: '2.0.2-RELEASE')
+    compile(group: 'org.mongodb', name: 'mongodb-driver', version: '3.6.3')
+    compileOnly(group: 'javax.servlet', name: 'javax.servlet-api', version: '3.1.0')
     testCompile(group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3')
     testCompile(group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25')
     testCompile(group: 'org.slf4j', name: 'jcl-over-slf4j', version: '1.7.25')
