--- a/build.gradle
+++ b/build.gradle
@@ -44,7 +44,7 @@ sourceCompatibility = 1.8
 
 targetCompatibility = 1.8
 
-version = '1.3.6-RELEASE'
+version = '1.3.7-RELEASE'
 
 group = 'com.themodernway'
 
@@ -61,8 +61,8 @@ tasks.withType(Checkstyle) { source 'src/main' }
 
 task deleteConfigs(type: Delete) {
     def tree = fileTree(dir: "${buildDir}/resources/main")
-    tree.each {  file ->
-        delete(file)
+    tree.each { file ->
+        file.delete()
     }
 }
 
@@ -237,7 +237,7 @@ tasks.withType(GroovyCompile) {
 }
 
 dependencies {
-    compile(group: 'com.themodernway', name: 'themodernway-server-core', version: '1.3.6-RELEASE')
+    compile(group: 'com.themodernway', name: 'themodernway-server-core', version: '1.3.7-RELEASE')
     compile(group: 'org.mongodb', name: 'mongodb-driver', version: '3.6.3')
     testCompile(group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3')
     testCompile(group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25')
